# multiplier

./: LICENSE  README.md  pyproject.toml
multiplier/: __init__.py
multiplier/templates/: base.html  numbers.html  pick_story.html  results.html  story.html
