[project]
name = "multiplier"
version = "0.1.0"
description = "Helps children to speed up their multiplication on a fun game"
authors = [
    {name = "Felipe Grazziotin",email = "felipe@starbyte.net"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "flask (>=3.1.0,<4.0.0)",
    "gunicorn (>=23.0.0,<24.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
black = "^25.1.0"

